manifests/azure/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"   # Use Azure internal LB
spec:
  selector:
    app: demo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
